[package]
name = "libafl_nyx"
version = "0.1.0"
edition = "2021"
authors = ["syheliel <syheliel@gmail.com>"]
description = "libafl using nyx"
documentation = "https://docs.rs/libafl_nyx"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnyx = {git = "https://github.com/nyx-fuzz/libnyx.git"}
impl-tools = "0.3.2"
libafl = { path = "../libafl", version = "0.7.1", features = ["std", "libafl_derive", "frida_cli"] }
libafl_targets = { path = "../libafl_targets", version = "0.7.1", features = ["std", "sancov_cmplog"] }
