[package]
name = "libafl_nyx"
version.workspace = true
edition = "2024"
authors = ["syheliel <syheliel@gmail.com>"]
description = "libafl using nyx, only avaliable on linux"
documentation = "https://docs.rs/libafl_nyx"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
categories = [
  "development-tools::testing",
  "emulators",
  "embedded",
  "os",
  "no-std",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
libnyx = { git = "https://github.com/nyx-fuzz/libnyx.git", rev = "f07a41fcf0a01be5f8b8397b26cb914a149b9198" }
libafl = { workspace = true, default-features = true, features = [
  "std",
  "libafl_derive",
  "frida_cli",
] }
libafl_bolts = { workspace = true, default-features = true, features = [
  "std",
  "libafl_derive",
  "frida_cli",
] }
libafl_targets = { workspace = true, default-features = true, features = [
  "std",
  "sancov_cmplog",
] }

nix = { workspace = true, default-features = true, features = ["fs"] }
typed-builder = { workspace = true }
regex = "1.11.1"
serde = { version = "1.0.210", default-features = false, features = [
  "alloc",
] } # serialization lib

[lints]
workspace = true
