[package]
name = "libafl_qemu"
version.workspace = true
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "QEMU user backend library for LibAFL"
documentation = "https://docs.rs/libafl_qemu"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "qemu", "instrumentation"]
edition = "2021"
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fork", "build_libqasan", "serdeany_autoreg"]
python = ["pyo3", "pyo3-build-config"]
fork = ["libafl/fork"]
build_libqasan = []

# The following architecture features are mutually exclusive.
x86_64 = ["libafl_qemu_sys/x86_64"] # build qemu for x86_64 (default)
i386 = ["libafl_qemu_sys/i386"] # build qemu for i386
arm = ["libafl_qemu_sys/arm"] # build qemu for arm
aarch64 = ["libafl_qemu_sys/aarch64"] # build qemu for aarch64
mips = ["libafl_qemu_sys/mips"] # build qemu for mips (el, use with the 'be' feature of mips be)
ppc = ["libafl_qemu_sys/ppc"] # build qemu for powerpc
hexagon = ["libafl_qemu_sys/hexagon"] # build qemu for hexagon

be = ["libafl_qemu_sys/be"]

usermode = ["libafl_qemu_sys/usermode"]
systemmode = ["libafl_qemu_sys/systemmode"]

# SerdeAny features
serdeany_autoreg = ["libafl_bolts/serdeany_autoreg"] # Automatically register all `#[derive(SerdeAny)]` types at startup.

slirp = [ "systemmode", "libafl_qemu_sys/slirp" ] # build qemu with host libslirp (for user networking)

clippy = [] # special feature for clippy, don't use in normal projects§

[dependencies]
libafl = { path = "../libafl", version = "0.11.1", default-features = false, features = ["std", "derive", "regex"] }
libafl_bolts = { path = "../libafl_bolts", version = "0.11.1", default-features = false, features = ["std", "derive"] }
libafl_targets = { path = "../libafl_targets", version = "0.11.1" }
libafl_qemu_sys = { path = "./libafl_qemu_sys", version = "0.11.1" }

serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
hashbrown =  { version = "0.14", features = ["serde"] } # A faster hashmap, nostd compatible
num-traits = "0.2"
num_enum = "0.7"
goblin = "0.7"
libc = "0.2"
strum = "0.25"
strum_macros = "0.25"
syscall-numbers = "3.0"
meminterval = "0.4"
thread_local = "1.1.4"
capstone = "0.11.0"
rangemap = "1.3"
log = "0.4.20"
addr2line = "0.21"
typed-arena = "2.0"

pyo3 = { version = "0.18", optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.18", optional = true }

[lib]
name = "libafl_qemu"
crate-type = ["cdylib", "rlib"]
