[package]
name = "libafl_targets"
version.workspace = true
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "Common code for target instrumentation that can be used combined with LibAFL"
documentation = "https://docs.rs/libafl_targets"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing"]
edition = "2021"
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]


[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "sanitizers_flags"]
std = ["libafl/std"]
libfuzzer = ["std", "sanitizer_interfaces"]
libfuzzer_no_link_main = ["libfuzzer"]
libfuzzer_define_run_driver = ["libfuzzer"]
libfuzzer_oom = ["libfuzzer"]
sanitizers_flags = []
pointer_maps = []
sancov_pcguard_edges = []
sancov_pcguard_hitcounts = []
sancov_value_profile = []
sancov_8bit = []
sancov_cmplog = []
sancov_pcguard = ["sancov_pcguard_hitcounts"]
sanitizer_interfaces = []
clippy = [] # Ignore compiler warnings during clippy
observers = ["meminterval", "ahash"]
whole_archive = [] # use +whole-archive to ensure the presence of weak symbols

[build-dependencies]
bindgen = "0.68"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
libafl = { path = "../libafl", version = "0.11.1", default-features = false, features = [] }
libafl_bolts = { path = "../libafl_bolts", version = "0.11.1", default-features = false, features = [] }
libc = "0.2"
log = "0.4.20"

rangemap = "1.3"
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
meminterval = {version = "0.4", features = ["serde"], optional = true }
ahash = { version = "0.8.3", default-features = false, optional = true }
# serde-big-array = "0.3.2"
