[package]
name = "libafl_test"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../libafl", default-features = false, version = "0.11.1", features = [
    "std",
    "derive",
    "introspection",
] }
libafl_bolts = { path = "../libafl_bolts", version = "0.11.1", default-features = false, features = [
    "std",
    "derive",
] }