[package]
name = "libafl_tinyinst"
version.workspace = true
edition = "2021"
authors = ["elbiazo <eric.l.biazo@gmail.com>", "Dongjia Zhang <tokazerkje@outlook.com>"]
repository = "https://github.com/AFLplusplus/LibAFL/"
categories = ["development-tools::testing", "emulators", "embedded", "os", "no-std"]
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
description = "TinyInst backend for libafl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../libafl", version = "0.10.1", features = [
    "std",
    "libafl_derive",
] }
tinyinst = { git = "https://github.com/AFLplusplus/tinyinst-rs" }
# tinyinst-rs = { path = "../../tinyinst-rs" }
log = "0.4.17"

[build-dependencies]
cmake = "0.1"
