[package]
name = "libafl_wizard"
version.workspace = true
edition = "2021"
authors = ["matheus <mbapts@gmail.com>"]
description = "libafl's fuzzer template generator"
documentation = "TODO"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
categories = ["TODO"]

[features]
ui = []

[dependencies]
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
slint = "1.1.1"
graphviz-rust = "0.6.6"