[package]
name = "pylibafl"
description = "Python bindings for LibAFL"
version = "0.14.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AFLplusplus/LibAFL/"
keywords = ["fuzzing", "testing", "security", "python"]
edition = "2021"
categories = ["development-tools::testing", "emulators", "embedded", "os"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-log = { version = "0.12.0" }
libafl_sugar = { path = "../../libafl_sugar", version = "0.14.1", features = [
  "python",
] }
libafl_bolts = { path = "../../libafl_bolts", version = "0.14.1", features = [
  "python",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libafl_qemu = { path = "../../libafl_qemu", version = "0.14.1", features = [
  "python",
] }

[build-dependencies]
pyo3-build-config = { workspace = true }

[lib]
name = "pylibafl"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
