[package]
name = "pylibafl"
description = "Python bindings for LibAFL"
version = "0.15.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AFLplusplus/LibAFL/"
keywords = ["fuzzing", "testing", "security", "python"]
edition = "2024"
categories = ["development-tools::testing", "emulators", "embedded", "os"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pyo3-log = { version = "0.12.2" }
libafl_sugar = { path = "../../libafl_sugar", version = "0.15.2", features = [
  "python",
] }
libafl_bolts = { path = "../../libafl_bolts", version = "0.15.2", features = [
  "python",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libafl_qemu = { path = "../../libafl_qemu", version = "0.15.2", features = [
  "python",
] }

[build-dependencies]
pyo3-build-config = "0.24.0"

[lib]
name = "pylibafl"
crate-type = ["cdylib"]

# TODO: find a way to fix this when a solution is found
# https://github.com/rust-lang/cargo/issues/9330
# [profile.dev]
# panic = "abort"
