[package]
name = "core_affinity2"
version.workspace = true
authors = [
  "Andrea Fioraldi <andreafioraldi@gmail.com>",
  "Dominik Maier <domenukk@gmail.com>",
]
description = "Core Affinity crate to bind to cores, cross platform"
documentation = "https://docs.rs/libafl"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["os", "core-affinity", "no-std"]
edition = "2024"
rust-version = "1.87"
categories = ["embedded", "os", "no-std"]

[package.metadata.docs.rs]
features = ["document-features"]
all-features = true

[features]
document-features = ["dep:document-features"]

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]

[dependencies]
# Document all features of this crate (for `cargo doc`)
document-features = { workspace = true, optional = true }
serde = { workspace = true, features = ["alloc", "derive"] }
libafl_core = { workspace = true, features = ["alloc", "std"] }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }

[lints]
workspace = true
